# SatOS-Payload-SDK

./: .gitignore  CHANGELOG.md  Makefile  Makefile.inc  README.md  Readme_Docker.md  Release_notes.txt
.github/workflows/: compile.yaml  docs.yaml  mainTesting.yml  master.yaml  python.yaml
app-images/cpp/: Dockerfile
app-images/python/: Dockerfile
app-images/shared/: root-entrypoint.sh
apps/: config.json  entrypoint.sh
build-tools/containers/: Dockerfile.build.x86_64
build-tools/scripts/: Dockerfile.ubuntu  build_app_pkg.sh  docker.sh  generate_build_info.sh  package-agent.sh  package-cpp-lib.sh  package-python-lib.sh  proxy_pkg_files.txt  sdk_pkg.sh
defs/api/: antaris_api.xml
docs/: README.md
docs/src/: conf.py  developer-guide.rst  index.rst  payload-interface.rst  python-application-guide.rst
examples/: config.json  entrypoint.sh  payload_sequence.json
examples/app-cpp/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  (+1 more)
lib/python/: antaris_api_client.py  antaris_api_common.py  antaris_api_gpio.py  antaris_sdk_environment.py  pyproject.toml  tox.ini
lib/python/satos_payload/: antaris_api_client.py  antaris_api_common.py  antaris_api_gpio.py  app_framework.py
lib/python/satos_payload/examples/: hello_world.py
lib/python/satos_payload_sdk/: __init__.py  antaris_api_can.py  antaris_api_client.py  antaris_api_common.py  antaris_api_gpio.py  antaris_api_i2c.py  antaris_api_parser.py  antaris_file_download.py  antaris_sdk_environment.py  app_framework.py
lib/python/satos_payload_sdk/examples/: hello_world.py
lib/python/tests/: test_app_framework.py  test_hello_world.py
pc-sim/: antaris_pc_stub.cc  config_db.cc  config_db.h  invoke_pc_sim.py  sequence_schedule.json
sdk-agent/: run-agent.sh
tools/: README.md  app_pkg_files.txt  generate_build_info.sh  package-agent.sh  package-cpp-lib.sh  package-grpc-lib.sh  package-python-lib.sh  package_grpc_build.sh  place_files.sh  proxy_pkg_files.txt  sdk_pkg.sh  sdk_pkg_files.txt
utilities/: README.md  create_payload_tarball.sh  create_upgrade_docker_artifact_tar.sh
(+90 files in other folders)
