[build-system]
requires = ["setuptools>=42", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "satos_payload_sdk"
authors = [
  {name = "Antaris, Inc", email = "opensource@antaris.space"},
]
description = "Library used to develop SatOS(TM) payloads"
license = { text = "Apache-2.0" }
requires-python = ">=3.7"
dependencies = [
  "importlib-metadata; python_version <\"3.8\"",
  "grpcio ~=1.0",
  "grpcio-tools",
  "protobuf ~=4.0",
  "pylibftdi",
  "azure-storage-file-share",
  "requests",
]
dynamic = [
  "version"
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
